# One-Bite-Pizza

./: .pre-commit-config.yaml  Dockerfile  README.md  config.yml  helpers.py  lambda_test.json  main.py  project.yml  pyproject.toml  test.py  test.txt
.github/workflows/: cd.yml  ci.yml  prod.yml  run_script.yml  test.yml
app/: Dockerfile  main.py  odds.py  producer.py
app/modules/: config.py
extract/: main.py
infra/: deploy.sh  resources.yml
infra/cloudformation/: resources.yml
modules/: config.py
scripts/: build.sh  pre-commit.sh  push.sh  run.sh
scripts/app/docker/: build.sh  push.sh  run.sh
scripts/dev/: pre-commit.sh
scripts/docker/: build.sh  pull.sh  push.sh  run.sh  test.sh
scripts/infra/: deploy.sh
scripts/shared/: common.sh  ecr_base.sh
